[package]
name = "networkflow"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = [
    "networkflow",
    "flow",
    "max-flow",
    "min-cost",
    "graph",
    "algorithms",
]
description = "A collection of network flow algorithms."
readme = "README.md"
repository = "https://github.com/pvunderink/networkflow"

[dependencies]
num = { version = "0.4.3" }
try-partialord = { version = "0.1.3" }
